feat: Implement initial backend setup with Firebase integration, authentication middleware, and core API routes.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,14 +3,13 @@ PORT=8080
 HOST=localhost
 ENVIRONMENT=development
 
-# Database Configuration
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=sportofolio_db
-DB_USER=postgres
-DB_PASSWORD=your_password_here
+# Firebase Configuration
+FIREBASE_PROJECT_ID=your-firebase-project-id
+FIREBASE_SERVICE_ACCOUNT_PATH=./firebase-service-account.json
+FIREBASE_DATABASE_URL=https://your-project-id.firebaseio.com
+FIREBASE_STORAGE_BUCKET=your-project-id.appspot.com
 
-# JWT Configuration
+# JWT Configuration (for custom tokens if needed)
 JWT_SECRET=your_jwt_secret_key_here
 JWT_EXPIRATION=86400
 
