--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Additional ignores for Flutter/Dart/VSCode
+.metadata
+pubspec.lock
+.vscode/
+*.log
