--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  image_picker: ^1.0.7
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.3.2
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.10
+
+  # Firebase dependencies
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
+  firebase_storage: ^12.3.4
 
 dev_dependencies:
   flutter_test:
