feat: Refactor Profile and Settings Screens with Cloudinary Integration
- Updated ProfileScreen to use a Stream for user data instead of loading it once.
- Integrated PostsService to fetch user posts dynamically.
- Replaced Firebase Storage with Cloudinary for profile image uploads in SettingsScreen.
- Added CloudinaryService for handling image uploads and transformations.
- Implemented error handling and loading indicators for better user experience.
- Updated pubspec.yaml and pubspec.lock to include cloudinary_public and flutter_dotenv packages.

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,13 @@ GoogleService-Info.plist
 pubspec.lock
 .vscode/
 *.log
+
+
+# Environment variables - IMPORTANT: Keep credentials safe!
+.env
+.env.*
+!.env.example
+
+# Cloudinary config (if not using .env)
+lib/config/cloudinary_config.dart
+!lib/config/cloudinary_config.example.dart
