--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   shared_preferences: ^2.3.2
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.10
+  cloudinary_public: ^0.21.0
+  flutter_dotenv: ^5.1.0
 
   # Firebase dependencies
   firebase_core: ^3.6.0
@@ -65,6 +67,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env
     - assets/images/
     - assets/icons/
 
