feat: Add user verification feature and trials screen
- Implemented user verification application process in settings screen.
- Added a new TrialsScreen to indicate upcoming features.
- Updated Firebase service to include followers and following fields for users.
- Created a migration script to add followers and following fields to existing user documents.
- Enhanced PostWidget to support dynamic profile images and verification status.
- Improved error handling and loading states for image loading in PostWidget.
- Updated pubspec.yaml and pubspec.lock to include new dependencies.

Co-authored-by: Mohy
mohym3295@gmail.com

Co-authored-by: Kareem
kareem.adel20047@gmail.com

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^2.0.10
   cloudinary_public: ^0.21.0
   flutter_dotenv: ^5.1.0
+  timeago: ^3.7.0
 
   # Firebase dependencies
   firebase_core: ^3.6.0
